Fix JC-579: 1. Move sizes and gaps to variables 2. Rename 'isOpenMenu' to 'isMenuOpened' in 'AnimePage.tsx' 3. Rename 'setIsOpenMenu' to 'setIsMenuOpened' in 'AnimePage.tsx' 4. Update 'Avatar' tag to self closing.

--- a/apps/react/src/features/anime/components/AnimeCard/AnimeCard.module.css
+++ b/apps/react/src/features/anime/components/AnimeCard/AnimeCard.module.css
@@ -1,7 +1,7 @@
 .animeCard {
 	display: flex;
 	align-items: flex-start;
-	gap: 10px;
+	gap: var(--card-gap);
 }
 
 .animeCard:hover {
@@ -10,6 +10,6 @@
 }
 
 .animeAvatar {
-	width: 80px;
-	height: 80px;
+	width: var(--card-avatar-width);
+	height: var(--card-avatar-height);
 }
