--- a/apps/react/src/theme/variables.css
+++ b/apps/react/src/theme/variables.css
@@ -2,6 +2,12 @@
 	/* Spaces */
 	--space-m: 16px;
 	--space-s: calc(var(--space-m) / 2);
+	--app-header-height: 64px;
+	--card-gap: 10px;
+
+	/* Sizes */
+	--card-avatar-width: 80px;
+	--card-avatar-height: 80px;
 
 	/* Colors */
 	--on-surface: hsl(0deg 0% 0% / 16%);
